## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libcSmRST.a

libcSmRST_a_CFLAGS = $(AM_CFLAGS)
libcSmRST_a_SOURCES = \
		RStarTree.c \
		RStarTree.h \
		RSTInstDel.c \
		RSTInstDel.h \
		RSTJoin.c \
		RSTJoin.h \
		RSTUtil.c \
	        RSTUtil.h \
		RSTInOut.c \
		RSTInOut.h \
	        RSTInterUtil.c \
	        RSTInterUtil.h  \
	        RSTQuery.c \
		RSTQuery.h \
		RSTBase.h
