include_HEADERS = fes.h


noinst_HEADERS = fes2004_lib.h

lib_LIBRARIES = libfes.a

libfes_a_SOURCES=fes2004_alloc.c fes2004_error.c fes2004_extraction.c fes2004_init.c fes2004_io.c fes2004_prediction.c fes2004_kernel.c


bin_PROGRAMS = FES2004_exe
FES2004_exe_SOURCES = fes2004_main.c 
FES2004_exe_LDFLAGS = -L.
